apps/vcluster-dev/overlays/ops/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster
  namespace: vcluster-dev
  annotations:
    link.argocd.argoproj.io/external-link: https://dev.k.unset-127-0-0-1.nip.io # kpt-set: https://dev.k.${host}
spec:
  hosts:
    - "dev.k.unset-127-0-0-1.nip.io" # kpt-set: dev.k.${host}
  gateways:
    - istio-system/istio-ingressgateway
  tls:
    - match:
        - sniHosts:
            - "dev.k.unset-127-0-0-1.nip.io" # kpt-set: dev.k.${host}
      route:
        - destination:
            host: vcluster-dev.vcluster-dev.svc.cluster.local
            port:
              number: 443
